--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ sudo: required
 dist: trusty
 
 script:
-  - bash -xve ./test/travis_ros_install.bash
+  - bash -xve ./test/travis_prepare_dummy_files.bash
+  - rostest pimouse_ros test.launch
